--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "react": "^18",
+    "react-animated-numbers": "^0.18.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-type-animation": "^3.2.0",
